google login update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">워쿠</string>
     <string name="login_skip_all">건너뛰기</string>
     <string name="APP_KEY">XBjxV9xTCua8I8aTeD05wrLmnvj5y1uKf5edmduha2zqAt7uUOYBZyu9bd2RxOChY7AusVoQdITaVC0JxJE4cQ%3D%3D</string>
+    <string name="web_client_id">877524463283-fgkbhh80i341j4vljbs587t9ejtliosk.apps.googleusercontent.com</string>
 </resources>
